--- a/rita.html
+++ b/rita.html
@@ -238,6 +238,7 @@
       <li>
         <a href="https://www.irs.gov/">IRS</a>
        </li>
+       <a href="https://www.irs.gov/pub/irs-pdf/p15.pdf">(Circular E), Employer's Tax Guide (page 57)</a>
       
     </ul>
 
