--- a/rita.html
+++ b/rita.html
@@ -92,6 +92,9 @@
 
     <ul>
      
+      <li>
+       <a href="https://aerial.carecoordination.medecision.com/login.html">Aerial Dashboard</a>
+      </li>
 
       <li>
        <a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey, Prospect, St. Francis)</a>
