--- a/rita.html
+++ b/rita.html
@@ -101,7 +101,7 @@
       </li>
 
       <li>
-        <a href="https://www.medi-cal.ca.gov/Eligibility/Login.asp">Medical</a>
+        <a href="https://www.medi-cal.ca.gov/Eligibility/Login.asp">Medi-Cal</a>
       </li>
 
 
