--- a/resume.html
+++ b/resume.html
@@ -1,165 +1,123 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kiron Roy - Resume</title>
-
-<meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
-<meta charset="UTF-8">
-
-<link type="text/css" rel="stylesheet" href="resumestyle.css">
-<link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
-
-	<!-- For Safari Browser: -->
-	<link rel="apple-touch-icon-precomposed" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
-
-	<!-- For Safari Browser on iPhone: -->
-	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
-
-	<!-- For third-generation iPad with high-resolution Retina display: -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
-
-	<!-- For iPhone with high-resolution Retina display: -->
-
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
-
-	<!-- For first- and second-generation iPad: -->
-
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
-
- <!-- For iPhone: -->
-
- <link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
-
-	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-
- <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-
-<!--[if lt IE 9]>
-<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+  <title>Kiron Roy: Resume</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="resumestyle.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
+  <script src="js/konami.js">
+  </script><!-- For Safari Browser: -->
+  <link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
+  <link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
+  <link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
+  <link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+  <link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed"><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+  <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" -->
 </head>
 <body id="top">
-<div id="cv" class="instaFade">
-	<div class="mainDetails">
-		<div id="headshot" class="quickFade">
-			<a href="http://kironroy.github.io"> <img src="logo2.svg" alt="Kiron Roy Logo" style="width:90px;height:90px;"></a>
-		</div>
-
-		<div id="name">
-   <br>
-			<h1 class="quickFade delayTwo"><a href="http://kironroy.github.io/">Kiron Roy</a></h1>
-			<h3 class="quickFade delayThree">&nbsp;Résumé</h3>
-		</div>
-
-		<div id="contactDetails" class="quickFade delayFour">
-			<ul>
-				<li>email: &nbsp;  <a href="mailto:kironroynet@gmail.com?Subject=Regarding your portfolio:" target="_blank">kironroynet@gmail.com</a></li>
-				<li>github: &nbsp;  <a href="https://github.com/kironroy">kironroy repositories</a></li>
-    <li>website: &nbsp; <a href="http://kironroy.github.io/">portfolio</a></li>
-				<li></li>
-			</ul>
-		</div>
-		<div class="clear"></div>
-	</div>
-
-	<div id="mainArea" class="quickFade delayFive">
-
-		<section>
-			<div class="sectionTitle">
-				<h1>Work Experience</h1>
-			</div>
-
-			<div class="sectionContent">
-				<article>
-					<h2>Bookkeeper, Rita Roy Pediatrics</h2>
-					<p class="subDetails">October 2010 - Present</p>
-					<p>Bookkeeping with Excel/OpenOffice.
-      <br>
-      <em>Billing/Posting payments to <a href="https://pm.officeally.com/pm/login.aspx">Office Ally</a></em>.
-      <br>
-      Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a></em>.
-      <br>
-      Billing Information <a href="https://repl.it/FlPz/61">made in ruby programming language</a></em>.</p>
-				</article>
-				<article>
-					<h2>Accounting Intern at Downey Hospital</h2>
-					<p class="subDetails">July 2012 - August 2013</p>
-					<p>Entering invoices with Mediclick.  Maintaining an Excel sheet  that tracks purchase orders and manual invoices.</p>
-				</article>
-
-				<article>
-					<h2>Photographer, Om Imports</h2>
-					<p class="subDetails">July 2011 - August 2012</p>
-					<p>Product Photography.  Editing photographs with Photoshop and uploading to the company website.</p>
-				</article>
-
-
-			</div>
-			<div class="clear"></div>
-		</section>
-
-
-		<section>
-			<div class="sectionTitle">
-				<h1>Key Skills</h1>
-			</div>
-
-			<div class="sectionContent">
-				<ul class="keySkills">
-					<li>Adobe Photoshop</li>
-					<li>Adobe Illustrator‎</li>
-					<li>Adobe InDesign</li>
-					<li>Excel/OpenOffice</li>
-					<li>GitHub</li>
-					<li>HTML/CSS</li>
-					<li>JavaScript (basics)</li>
-     <li>MySQL (basics)</li>
-					<li>Product Photography</li>
-     <li>Ruby</li>
-					<li>Sketch (macOS)</li>
-					<li>Terminal (macOS)</li>
-					<li>Windows PowerShell</li>
-     <li>QGIS</li>
-					<li>Web Maps</li>
-				</ul>
-			</div>
-			<div class="clear"></div>
-		</section>
-
-
-		<section>
-			<div class="sectionTitle">
-				<h1>Education</h1>
-			</div>
-
-			<div class="sectionContent">
-
-    <article>
-					<h2>CSUF Extension </h2>
-					<p class="subDetails">Certificate in Geographic Information Systems, 2014</p>
-					<p></p>
-				</article>
-
-				<article>
-     <h2>UCLA</h2>
-     <p class="subDetails">History BA, 2005</p>
-     <p></p>
-				</article>
-			</div>
-			<div class="clear"></div>
-		</section>
-
-	</div>
-</div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3753241-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+  <div class="instaFade" id="cv">
+    <div class="mainDetails">
+      <div class="quickFade" id="headshot">
+        <a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo2.svg" style="width:90px;height:90px;"></a>
+      </div>
+      <div id="name">
+        <br>
+        <h1 class="quickFade delayTwo"><a href="http://kironroy.github.io/">Kiron Roy</a></h1>
+        <h3 class="quickFade delayThree">&nbsp;Résumé</h3>
+      </div>
+      <div class="quickFade delayFour" id="contactDetails">
+        <ul>
+          <li>email: &nbsp; <a href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:" target="_blank">kironroynet@gmail.com</a>
+          </li>
+          <li>github: &nbsp; <a href="https://github.com/kironroy">kironroy repositories</a>
+          </li>
+          <li>website: &nbsp; <a href="http://kironroy.github.io/">portfolio</a>
+          </li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <div class="quickFade delayFive" id="mainArea">
+      <section>
+        <div class="sectionTitle">
+          <h1>Work Experience</h1>
+        </div>
+        <div class="sectionContent">
+          <article>
+            <h2>Bookkeeper, Rita Roy Pediatrics</h2>
+            <p class="subDetails">October 2010 - Present</p>
+            <p>Bookkeeping with Excel/OpenOffice.<br>
+            <em>Billing/Posting payments to <a href="https://pm.officeally.com/pm/login.aspx">Office Ally</a></em>.<br>
+            Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a>.<br>
+            Billing Information <a href="https://repl.it/FlPz/61">made in ruby programming language</a>.</p>
+          </article>
+          <article>
+            <h2>Accounting Intern at Downey Hospital</h2>
+            <p class="subDetails">July 2012 - August 2013</p>
+            <p>Entering invoices with Mediclick. Maintaining an Excel sheet that tracks purchase orders and manual invoices.</p>
+          </article>
+          <article>
+            <h2>Photographer, Om Imports</h2>
+            <p class="subDetails">July 2011 - August 2012</p>
+            <p>Product Photography. Editing photographs with Photoshop and uploading to the company website.</p>
+          </article>
+        </div>
+        <div class="clear"></div>
+      </section>
+      <section>
+        <div class="sectionTitle">
+          <h1>Key Skills</h1>
+        </div>
+        <div class="sectionContent">
+          <ul class="keySkills">
+            <li>Adobe Photoshop</li>
+            <li>Adobe Illustrator</li>
+            <li>Adobe InDesign</li>
+            <li>Excel/OpenOffice</li>
+            <li>GitHub</li>
+            <li>HTML/CSS</li>
+            <li>JavaScript (basics)</li>
+            <li>MySQL (basics)</li>
+            <li>Product Photography</li>
+            <li>Ruby</li>
+            <li>Sketch (macOS)</li>
+            <li>Terminal (macOS)</li>
+            <li>Windows PowerShell</li>
+            <li>QGIS</li>
+            <li>Web Maps</li>
+          </ul>
+        </div>
+        <div class="clear"></div>
+      </section>
+      <section>
+        <div class="sectionTitle">
+          <h1>Education</h1>
+        </div>
+        <div class="sectionContent">
+          <article>
+            <h2>CSUF Extension</h2>
+            <p class="subDetails">Certificate in Geographic Information Systems, 2014</p>
+            <p></p>
+          </article>
+          <article>
+            <h2>UCLA</h2>
+            <p class="subDetails">History BA, 2005</p>
+            <p></p>
+          </article>
+        </div>
+        <div class="clear"></div>
+      </section>
+    </div>
+  </div>
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script> 
+  <script type="text/javascript">
+  var pageTracker = _gat._getTracker("UA-3753241-1");
+  pageTracker._initData();
+  pageTracker._trackPageview();
+  </script>
 </body>
 </html>
