--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     "label">Github</span></a>
                 </li>
                 <li>
-                    <a class="icon fa fa-tachometer" href=
-                    "https://github.com/kironroy/kironroy.github.io/wiki/GitHub-Guide"><span class="label">Git
+                    <a class="icon fa fa-github-alt" href=
+                    "https://github.com/kironroy/kironroy.github.io/wiki"><span class="label">Git
                     Help</span></a>
                 </li>
                 <li>
