--- a/rita.html
+++ b/rita.html
@@ -77,6 +77,9 @@
       <li>
         <a href="http://www.pri-med.com/medical-conferences.aspx">Pri Med Conferences</a>
       </li>
+      <li>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://register.xpressreg.net/RRCV3/WEST0517/Login">Pri Med Conference Login</a>
+      </li>
     </ul>
     <!-- Resources ends -->
 
