--- a/resume.html
+++ b/resume.html
@@ -95,6 +95,11 @@
         </div>
         <div class="sectionContent">
           <article>
+            <h2>freeCodeCamp</h2>
+            <p class="subDetails presentDetails">Computer Software Engineering, Present</p>
+            <p></p>
+          </article>
+          <article>
             <h2>CSUF Extension</h2>
             <p class="subDetails">Certificate in Geographic Information Systems, 2014</p>
             <p></p>
