map icon for cities

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Kiron Roy</title>
   <link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <meta content=", GIS, ArcGIS, Google, OpenStreetMap, QGIS" name="description">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
@@ -50,7 +49,7 @@
             <a class="skel-layers-ignoreHref" href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a>
           </li>
           <li>
-            <a class="skel-layers-ignoreHref" href="#about" id="about-link"><span class="icon fa-user">Cities</span></a>
+            <a class="skel-layers-ignoreHref" href="#about" id="about-link"><span class="icon fa-map-marker"">Cities</span></a>
           </li>
           <li>
             <a class="skel-layers-ignoreHref" href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a>
