map icon for cities

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="skel-layers-ignoreHref" href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a>
           </li>
           <li>
-            <a class="skel-layers-ignoreHref" href="#about" id="about-link"><span class="icon fa-map-marker"">Cities</span></a>
+            <a class="skel-layers-ignoreHref" href="#about" id="about-link"><span class="icon fa-map-marker">Cities</span></a>
           </li>
           <li>
             <a class="skel-layers-ignoreHref" href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a>
