updated styles links

--- a/resume.html
+++ b/resume.html
@@ -96,12 +96,12 @@
         <div class="sectionContent">
           <article>
             <h2>freeCodeCamp</h2>
-            <p class="subDetails presentDetails">Computer Software Engineering, Present</p>
+            <p class="subDetails presentDetails"><a href="https://www.freecodecamp.com/kironroy">Computer Software Engineering, Present</a></p>
             <p></p>
           </article>
           <article>
             <h2>CSUF Extension</h2>
-            <p class="subDetails">Certificate in Geographic Information Systems, 2014</p>
+            <p class="subDetails"><a href="https://kironroy.github.io/kiron_roy_gis_cert.pdf">Certificate in Geographic Information Systems, 2014</a></p>
             <p></p>
           </article>
           <article>
