resume index update

--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
         <li>
           <a class="icon fa fa-free-code-camp" href="https://www.freecodecamp.com/kironroy"><span class="label">freeCodeCamp</span></a>
         </li>
-        <li>
-          <a class="icon fa fa-file-code-o" href="https://www.codecademy.com/kironroy"><span class="label">Codecademy</span></a>
+          <a class="icon fa-codepen" href="http://codepen.io/kironroy/#"><span class="label">Codepen</span></a>
         </li>
         <li>
-          <a class="icon fa-codepen" href="http://codepen.io/kironroy/#"><span class="label">Codepen</span></a>
+          <a class="icon fa fa-500px" href="https://500px.com/kironroynet"><span class="label">500px</span></a>
         </li>
       </ul>
     </div>
