--- a/resume.html
+++ b/resume.html
@@ -97,6 +97,7 @@
           <article>
             <h2>freeCodeCamp</h2>
             <p class="subDetails presentDetails"><a href="https://www.freecodecamp.com/kironroy">Computer Software Engineering, Present</a></p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
             <p></p>
           </article>
           <article>
