--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@
             <li>Adobe Illustrator</li>
             <li>Adobe InDesign</li>
             <li>Excel/OpenOffice</li>
-            <li>GitHub</li>
+            <li>Git</li>
             <li>HTML/CSS</li>
             <li>JavaScript (basics)</li>
             <li>Product Photography</li>
