--- a/resume.html
+++ b/resume.html
@@ -77,11 +77,11 @@
             <li>Excel/OpenOffice</li>
             <li>Git</li>
             <li>HTML/CSS</li>
-            <li>JavaScript (basics)</li>
+            <li>JavaScript</li>
             <li>Product Photography</li>
             <li>Ruby</li>
-            <li>Sketch (macOS)</li>
-            <li>Terminal (macOS)</li>
+            <li>Sketch: macOS</li>
+            <li>Terminal: macOS</li>
             <li>Windows PowerShell</li>
             <li>QGIS</li>
             <li>Web Maps</li>
@@ -98,6 +98,7 @@
             <h2>freeCodeCamp</h2>
             <p class="subDetails presentDetails"><a href="https://www.freecodecamp.com/kironroy">Computer Software Engineering, Present</a></p>
             <p class="subDetails">&nbsp;&nbsp;&nbsp;<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;<a href="https://github.com/kironroy/ruby_hardway">Learn Ruby the Hardway</a></p>
             <p></p>
           </article>
           <article>
