--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
         <div class="sectionContent">
           <article>
             <h2>Bookkeeper, Rita Roy Pediatrics</h2>
-            <p class="subDetails">October 2010 - Present</p>
+            <p class="subDetails presentDetails">October 2010 - Present</p>
             <p>Bookkeeping with Excel/OpenOffice.<br>
             <em>Billing/Posting payments to <a href="https://pm.officeally.com/pm/login.aspx">Office Ally</a></em>.<br>
             Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a>.<br>
@@ -97,8 +97,9 @@
           <article>
             <h2>freeCodeCamp</h2>
             <p class="subDetails presentDetails"><a href="https://www.freecodecamp.com/kironroy">Computer Software Engineering, Present</a></p>
-            <p class="subDetails">&nbsp;&nbsp;&nbsp;<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
-            <p class="subDetails">&nbsp;&nbsp;&nbsp;<a href="https://github.com/kironroy/ruby_hardway">Learn Ruby the Hardway</a></p>
+            <p class="subDetails">&nbsp;&nbsp;Preparatory Work:</p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href="https://github.com/kironroy/ruby_hardway">Learn Ruby the Hardway</a></p>
             <p></p>
           </article>
           <article>
