--- a/quotes.html
+++ b/quotes.html
@@ -5,25 +5,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="quotes_style.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400i" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <div class="container-fluid">
-  <h2>Random Computer Science Quotes</h2>
-  <p>Resize the browser window to see the effect.</p>
+  <h1>Random Computer Science Quotes</h1>
+<br>
   <div id="quoteDisplay">
     <!-- Quotes will be displayed here -->
   </div>
 <!-- style this button -->
+  <br>
   <button onclick="newQuote()">New Quote</button>
+  <br>
   <script src="quotes_script.js"></script>
+
   <div class="row">
-    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
-    <div class="col-sm-4" style="background-color:lavenderblush;">.col-sm-4</div>
-    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
+    <br>
+    <div class="col-sm-4" style="background-color:lavender;"><p>|</p></div>
+    <div class="col-sm-4" style="background-color:lavenderblush;"><p>|</p></div>
+    <div class="col-sm-4" style="background-color:lavender;"><p>|</p></div>
   </div>
 </div>
 
