--- a/quotes.html
+++ b/quotes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
   <title>Computer Quotes</title>
@@ -27,10 +27,10 @@
   </div>
 <!-- style this button -->
   <br>
-  <button onclick="newQuote()" class="btn btn-primary">New Quote</button>
-  <a class="twitter-share-button" href="https://twitter.com/intent/tweet" data-size="large" target="_blank">
-    <button type="button" class="btn btn-primary">Tweet it!</button>
-  </a>
+
+ <button onclick="newQuote()" class="button">New Quote</button>
+
+  <a href="https://twitter.com/intent/tweet" data-size="large" target= "_blank" class="btn btn-primary btn-sm" id="tweet"><i class="fa fa-twitter"></i> tweet</a>
 
   <br>
   <script src="quotes_script.js"></script>
