--- a/quotes.html
+++ b/quotes.html
@@ -28,7 +28,7 @@
 <!-- style this button -->
   <br>
 
- <button onclick="newQuote()" class="button">New Quote</button>
+ <button onclick="newQuote()" class="button">new quote</button>
 
   <a href="https://twitter.com/intent/tweet" data-size="large" target= "_blank" class="btn btn-primary btn-sm" id="tweet"><i class="fa fa-twitter"></i> tweet</a>
 
