--- a/redwoods.html
+++ b/redwoods.html
@@ -4,7 +4,8 @@
   <title>Redwoods: Sequoia sempervirens</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="redwoods2.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Yantramanav:300,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:700i" rel="stylesheet">
   <script src="js/konami.js">
   </script><!-- For Safari Browser: -->
   <link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
@@ -25,7 +26,7 @@
   </div>
   <div class="w3-row-padding">
     <div class="w3-third">
-      <h2>Books</h2><em></em>
+      <h2>Books</h2>
       <p><em><a href="http://jaredfarmer.net/books/trees-in-paradise/">Trees in Paradise: A California History</a></em></p><em></em>
       <p><em><a href="https://en.wikipedia.org/wiki/The_Wild_Trees">The Wild Trees</a></em></p><em></em>
       <p><em><a href="http://www.goodreads.com/book/show/695012.The_Last_Stand">The Last Stand: The War Between Wall Street and Main Street over California's Ancient Redwoods
