--- a/redwoods.html
+++ b/redwoods.html
@@ -6,7 +6,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="redwoods2.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Yantramanav:300,500" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
 	<script src="js/konami.js">
 	</script><!-- For Safari Browser: -->
 	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
@@ -23,7 +23,7 @@
 			<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo2.svg" style="width:90px;height:90px;"></a>
 		</center>
 		<h1>Redwoods: <em>Sequoia sempervirens</em></h1><span style="color:white;"></span>
-		<p><span style="color:white;">And it is moving, one travels slowly through the flickering light and shade of the Redwood Highway, to realize that many of these groves were given, in part, at least, by people who have never seen the Redwoods and perhaps do not expect ever to see them. For the members of the sponsoring organizations live in Iowa, or Vermont, in Georgia or New York. The great majority of them are probaly not persons of wealth at all. They gave anoymously, they gave purely, they gave to the future, to the people yet unborn; they gave not only to the country but to the world. And they gave out of deep religous feeling that the beauty and age and greatness that here have risen from earth to tower above us are holy and shall not be profaned. - Culross Peattie <em>A Natural History of Western Trees (1950)</em></span></p><br>
+		<p><span style="color:white; font-weight:300 ;">And it is moving, one travels slowly through the flickering light and shade of the Redwood Highway, to realize that many of these groves were given, in part, at least, by people who have never seen the Redwoods and perhaps do not expect ever to see them. For the members of the sponsoring organizations live in Iowa, or Vermont, in Georgia or New York. The great majority of them are probaly not persons of wealth at all. They gave anoymously, they gave purely, they gave to the future, to the people yet unborn; they gave not only to the country but to the world. And they gave out of deep religous feeling that the beauty and age and greatness that here have risen from earth to tower above us are holy and shall not be profaned. - Culross Peattie <em>A Natural History of Western Trees (1950)</em></span></p><br>
 	</div>
 	<div class="w3-row-padding">
 		<div class="w3-third">
