--- a/redwoods.html
+++ b/redwoods.html
@@ -20,7 +20,7 @@
 	<div class="w3-container w3-orange">
 		<br>
 		<center>
-			<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo3.svg" style="width:110px;height:110px;"></a>
+			<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_redwood.svg" style="width:110px;height:110px;"></a>
 		</center>
 		<br>
 		<h1>Redwoods: <em>Sequoia sempervirens</em></h1><span style="color:white;"></span>
