--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h2>Kiron Roy</h2>
       <div class="container">
         <br>
-        <!--**************************************SVG CODE AFTER THIS NOTE LOGO *****************************************-->
+        <!--**************************************SVG CODE AFTER THIS KIRON LOGO *****************************************-->
         <center>
           <svg height="184px" version="1.1" viewbox="0 0 184 184" width="184px" xmlns="http://www.w3.org/2000/svg"><!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
           <title>logo</title>
@@ -229,26 +229,84 @@
                     <circle cx="90.5" cy="83.475" fill="#33FF66" r="1.585"></circle>
                   </g>
                 </g>
-              </g></svg></a> <!--**************************************SVG CODE AFTER THIS NOTE NIGHT SCENE ENDED *****************************************-->
+              </g></svg></a> <!--**************************************SVG CODE AFTER THIS NIGHT SCENE ENDED *****************************************-->
               <header>
                 <h3>Night Scene</h3>
               </header>
             </article>
             <article class="item">
               <a class="image fit" href="http://kironroy.github.io/redwoods"><!-- **************************************SVG CODE AFTER THIS REDWOODS *****************************************-->
-               <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
-               <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 68 150" width="68px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
-              <path d="M6.254,60.907c0-17.397,12.423-31.5,27.746-31.5 c15.322,0,27.746,14.103,27.746,31.5C61.746,78.303,34,128.25,34,128.25S6.254,78.303,6.254,60.907z" fill="#7EC0EE" stroke="#612711" stroke-width="1.5"></path>
-              <g>
-                <g>
-                  <path d="M32.862,45.193h2.275v82.057h-2.275V45.193z" fill="#612711"></path>
-                </g>
-                <path d="M33.999,37.946l4.032,6.187h-2.686l-1.347-2.063l-1.341,2.063h-2.688L33.999,37.946z" fill="#006400"></path>
-                <path d="M33.997,41.039l6.235,9.57h-4.156l-2.078-3.191l-2.076,3.191h-4.156L33.997,41.039z" fill="#006400"></path>
-                <path d="M33.998,46.121l7.645,11.731h-5.096L34,53.939l-2.545,3.912h-5.099L33.998,46.121z" fill="#006400"></path>
-                <path d="M33.999,53.335l9.052,13.895h-6.033l-3.019-4.63l-3.016,4.63H24.95L33.999,53.335z" fill="#006400"></path>
-                <path d="M34,61.053l11.613,17.828h-7.742l-3.872-5.942l-3.874,5.944h-7.739L34,61.053z" fill="#006400"></path>
-              </g></svg></a> <!--*************************************SVG CODE REDWOODS ENDED *******************************************-->
+                <?xml version="1.0" encoding="utf-8"?>
+    <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
+    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 width="68px" height="150px" viewBox="0 0 68 150" enable-background="new 0 0 68 150" xml:space="preserve">
+    <g>
+    	<defs>
+    		<path id="SVGID_1_" d="M6.75,57.25c0-17.396,12.423-31.5,27.746-31.5c15.322,0,27.746,14.104,27.746,31.5
+    			s-27.746,67.344-27.746,67.344S6.75,74.646,6.75,57.25z"/>
+    	</defs>
+    	<clipPath id="SVGID_2_">
+    		<use xlink:href="#SVGID_1_"  overflow="visible"/>
+    	</clipPath>
+    	<rect x="1.75" y="20.75" clip-path="url(#SVGID_2_)" fill="#6E2A1F" width="65.492" height="108.844"/>
+    </g>
+    <g>
+    	<defs>
+    		<rect id="SVGID_3_" x="6" y="25" width="56.992" height="101.138"/>
+    	</defs>
+    	<clipPath id="SVGID_4_">
+    		<use xlink:href="#SVGID_3_"  overflow="visible"/>
+    	</clipPath>
+    	<g clip-path="url(#SVGID_4_)" enable-background="new    ">
+    		<g>
+    			<defs>
+    				<rect id="SVGID_5_" x="22" y="34" width="25" height="73"/>
+    			</defs>
+    			<clipPath id="SVGID_6_">
+    				<use xlink:href="#SVGID_5_"  overflow="visible"/>
+    			</clipPath>
+    			<g clip-path="url(#SVGID_6_)">
+    				<defs>
+    					<rect id="SVGID_7_" x="33.358" y="41.536" width="2.275" height="65.14"/>
+    				</defs>
+    				<clipPath id="SVGID_8_">
+    					<use xlink:href="#SVGID_7_"  overflow="visible"/>
+    				</clipPath>
+    				<g clip-path="url(#SVGID_8_)">
+    					<defs>
+    						<rect id="SVGID_9_" x="6" y="25" width="57" height="100"/>
+    					</defs>
+    					<clipPath id="SVGID_10_">
+    						<use xlink:href="#SVGID_9_"  overflow="visible"/>
+    					</clipPath>
+    					<rect x="28.358" y="36.536" clip-path="url(#SVGID_10_)" fill="#FFFFFF" width="12.275" height="75.14"/>
+    				</g>
+    			</g>
+    			<g clip-path="url(#SVGID_6_)">
+    				<defs>
+    					<polygon id="SVGID_11_" points="30.473,63.573 25.446,63.573 31.554,54.194 26.852,54.194 31.57,46.952 28.262,46.952
+    						32.479,40.476 30.464,40.476 34.495,34.289 38.527,40.476 36.509,40.476 40.729,46.952 37.419,46.952 42.139,54.195
+    						37.438,54.195 43.547,63.573 38.52,63.573 46.109,75.224 38.367,75.224 34.495,69.282 30.621,75.226 22.882,75.226 "/>
+    				</defs>
+    				<clipPath id="SVGID_12_">
+    					<use xlink:href="#SVGID_11_"  overflow="visible"/>
+    				</clipPath>
+    				<g clip-path="url(#SVGID_12_)">
+    					<defs>
+    						<rect id="SVGID_13_" x="6" y="25" width="57" height="100"/>
+    					</defs>
+    					<clipPath id="SVGID_14_">
+    						<use xlink:href="#SVGID_13_"  overflow="visible"/>
+    					</clipPath>
+    					<rect x="17.882" y="29.289" clip-path="url(#SVGID_14_)" fill="#FFFFFF" width="33.227" height="50.937"/>
+    				</g>
+    			</g>
+    		</g>
+    	</g>
+    </g>
+    </svg>
+</a> <!--*************************************SVG CODE REDWOODS ENDED *******************************************-->
               <header>
                 <h3>Redwood Guide</h3>
               </header>
