--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     	<clipPath id="SVGID_2_">
     		<use xlink:href="#SVGID_1_"  overflow="visible"/>
     	</clipPath>
-    	<rect x="1.75" y="20.75" clip-path="url(#SVGID_2_)" fill="#6E2A1F" width="65.492" height="108.844"/>
+    	<rect x="1.75" y="20.75" clip-path="url(#SVGID_2_)" fill="#7F1C25" width="65.492" height="108.844"/>
     </g>
     <g>
     	<defs>
