--- a/archives.html
+++ b/archives.html
@@ -140,6 +140,24 @@
                 <a class="image" href="images/fulls/archF12.jpg"><img alt="" src=
                 "images/thumbs/archT12.jpg"></a>
             </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF13.jpg"><img alt="" src=
+                "images/thumbs/archT13.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF14.jpg"><img alt="" src=
+                "images/thumbs/archT14.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF15.jpg"><img alt="" src=
+                "images/thumbs/archT15.jpg"></a>
+            </article>
         </div>
         <!-- Footer -->
 
